force-app/main/default/objects/API_Routing__mdt/API_Routing__mdt.object-meta.xml
<CustomObject>
    <description>This metadata defines what URLs can be called and what class will process the request posted to that URL</description>
    <label>API Routing</label>
    <pluralLabel>API Routings</pluralLabel>
</CustomObject>