force-app/main/default/objects/API_Routing__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the route is active or not. When inactive the route will not be checked.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>