force-app/main/default/objects/API_Routing__mdt/fields/API_URL__c.field-meta.xml
<CustomField>
    <fullName>API_URL__c</fullName>
    <description>Defines the API URL that can called by an external application.
The format is the defined base URL for the Apex REST API (for example /apigateway/v1/) + a specific destination like import.
Put together the value would be: /apigateway/v1/import</description>
    <label>API URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>