force-app/main/default/objects/API_Routing__mdt/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <description>The Http method that can be used with the API URL</description>
    <label>Http Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELETE</fullName>
                <default>true</default>
                <label>DELETE</label>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>