force-app/main/default/objects/API_Routing__mdt/fields/Service_Classname__c.field-meta.xml
<CustomField>
    <fullName>Service_Classname__c</fullName>
    <description>This field contains the classname of the class that will process the import message that is received at this url.
The class needs to import the Import_Service_Base class.</description>
    <label>Service Classname</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>